fix: revoke project-page-wrap label display

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -459,6 +459,10 @@
     width: 1170px;
     margin:20px auto 0;
 
+    label {
+      display: inline-block;
+    }
+
     h4 {
         padding:10px 0;
         line-height: 30px;
